--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,75 @@ hr {
 	margin-right: auto;
 	text-align: center;
 }
+
+span{
+	font-size: 1.5rem;
+	margin: 0em 0em;
+}
+span.default{
+	color: green;
+}
+span.selected{
+	color: blue;
+}
+ul{
+	list-style: none;
+}
+/* Cool stuff */
+/*Stat display*/
+.ui.horizontal.list > .stat{
+	font-size: 1.2rem;
+}
+.ui.horizontal.list > .item{
+	font-size: 1.5rem;
+	padding: 1rem 1rem;
+}
+
+.ui.horizontal.list > .default.item.stat{
+	color: #4C994C;
+}
+.ui.horizontal.list > .active.item.stat{
+	color: white;
+	background-color: #3b83c0!important;
+	display: inline-block;
+	vertical-align: baseline;
+	line-height: 1;
+	background-color: #e8e8e8;
+	border-color: #e8e8e8;
+	background-image: none;
+	padding: .6em .8em;
+	text-transform: none;
+	font-weight: 700;
+	border-radius: .2857rem;
+	box-sizing: border-box;
+	-webkit-transition: background .2s ease;
+	transition: background .2s ease;
+	min-width: 2em;
+	min-height: 2em;
+	padding: .5em!important;
+	line-height: 1em;
+	text-align: center;
+	border-radius: 500rem;
+
+}
+.ui.horizontal.list > .inactive.item.stat{
+	color: gray;
+}
+.speed.stat.holder{
+	/*display: inline-block;*/
+	white-space: nowrap;
+}
+.speed.stat li{
+	color: green;
+}
 /* Override some Semantic UI stuff*/
+.ui.card{
+	overflow-x: hidden;
+	overflow-y: hidden;
+	width: 10rem;
+	/*height: 10rem;*/
+}
+
 
 /* Differentiate characters */
 .ui.dropdown .menu>.item.red_char{
